--- a/Week-2/KNMI.html
+++ b/Week-2/KNMI.html
@@ -535,7 +535,7 @@
         ctx.stroke()
     }
     };
-    xhttp.open("GET", "KNMI_20011101.txt", true);
+    xhttp.open("GET", "json_data_1", true);
     xhttp.send();
 
 
