--- a/Week_3/barchart_template.html
+++ b/Week_3/barchart_template.html
@@ -3,7 +3,7 @@
     <style>
 
       .bar {
-      fill: steelblue;
+      fill: yellow;
       }
 
       .axis text {
@@ -26,61 +26,86 @@
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script>
 
-    var xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function() {
-
-    if (this.readyState == 4 && this.status == 200) {
-      // Typical action to be performed when the document is ready:
-      // var new_data = xhttp.responseText;
-      var width = 960,
-          height = 500;
-
-      // var x = d3.scaleLinear()
-      //     .range([0, width]);
+      // Source: http://bl.ocks.org/d3noob/8952219
+      var margin = {top: 20, right: 30, bottom: 30, left: 40},
+          width = 960 - margin.left - margin.right,
+          height = 500 - margin.top - margin.bottom;
 
       var x = d3.scale.ordinal()
           .rangeRoundBands([0, width], .1);
 
-      // var x = d3.scaleBand()
-      //   .domain(d3.range(0, width))
-      //   .range([0, width])
-
       var y = d3.scale.linear()
         .range([height, 0]);
 
-      var chart = d3.select(".chart")
-        .attr("width", width)
-        .attr("height", height);
+      var xAxis = d3.svg.axis()
+        .scale(x)
+        .orient("bottom");
 
+      var yAxis = d3.svg.axis()
+        .scale(y)
+        .orient("left");
+
+      var chart = d3.select(".chart")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
       d3.json("/json_data_1.json", function(error, data) {
-        // x.domain(data.map(function(d) { return d.name; }));
         x.domain(data.map(function(d) { return d.date; }));
         y.domain([0, d3.max(data, function(d) { return d.neer; })]);
 
-        console.log(data)
+      chart.append("g")
+       .attr("class", "x axis")
+       .attr("transform", "translate(0," + height + ")")
+       .call(xAxis);
 
-        // var barWidth = width / data.length;
+      chart.append("g")
+       .attr("class", "y axis")
+         .call(yAxis);
 
-        // chart.attr("height", barHeight * data.length);
-        // var barWidth = width / data.length;
+     chart.selectAll(".bar")
+       .data(data)
+     .enter().append("rect")
+       .attr("class", "bar")
+       .attr("x", function(d) { return x(d.date); })
+       .attr("y", function(d) { return y(d.neer); })
+       .attr("height", function(d) { return height - y(d.neer); })
+       .attr("width", x.rangeBand())
+       .on("mouseover", handleMouseOver)
+       .on("mouseout", handleMouseOut);
 
-        var bar = chart.selectAll("g")
-          .data(data)
-          .enter().append("g")
-          .attr("transform", function(d) { return "translate(" + x(d.date) + ",0)"; });
 
+     // Source : http://bl.ocks.org/WilliamQLiu/76ae20060e19bf42d774
+     // Create Event Handlers for mouse
+          function handleMouseOver(d, i) {  // Add interactivity
 
-        bar.append("rect")
-          .attr("y", function(d) { return y(d.neer); })
-          .attr("height", function(d) { return height - y(d.neer); })
-          .attr("width", x.rangeBand());
+                // Use D3 to select element, change color and size
+                d3.select(this).style(
+                  'fill', "red"
+                );
 
-        bar.append("text")
-          .attr("x", x.rangeBand() / 2)
-          .attr("y", function(d) { return y(d.neer) + 3; })
-          .attr("dy", ".75em")
-          .text(function(d) { return d.neer; });
+                // Specify where to put label of text
+                chart.append("text").attr({
+                   id: "t" + d.date + "-" + d.neer + "-" + i,  // Create an id for text so we can select it later for removing on mouseout
+                    x: function() { return x(d.date) - 30; },
+                    y: function() { return y(d.neer) - 5 ; }
+                })
+                .text(function() {
+                  return [d.date, d.neer];  // Value of the text
+                });
+              }
+
+          function handleMouseOut(d, i) {
+                // Use D3 to select element, change color back to normal
+                d3.select(this).style(
+                  'fill', "yellow",
+                );
+
+                // Select text by id and then remove
+                d3.select("#t" + d.date + "-" + d.neer + "-" + i).remove();  // Remove text location
+
+         };
       });
 
       function type(d) {
@@ -88,9 +113,5 @@
         return d;
       }
 
-      }
-    };
-    xhttp.open("GET", "json_data_1.json", true);
-    xhttp.send();
     </script>
   </html>
