--- a/Week_3/barchart.html
+++ b/Week_3/barchart.html
@@ -1,5 +1,3 @@
- <!-- Toon van Holthe tot Echten - 10798595 -->
-
 <!DOCTYPE html>
   <meta charset="utf-8">
     <style>
@@ -26,5 +24,5 @@
     </style>
     <svg class="chart"></svg>
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src='scripts.js'></script>
+    <script src='barchart.js'></script>
   </html>
