--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 	<body>
 		<h2>Homework assignments</h2>
 		<p id="Week 2">
-			<a href="Homework/Week_2/KNMI.html">Week 2: JavaScript intro</a>
+			<a href="Homework/week_2/KNMI.html">Week 2: JavaScript intro</a>
 		</p>
 		<p id="Week 3">
-			<a href="Homework/Week_3/barchart.html">Week 3: Barchart</a>
+			<a href="Homework/week_3/barchart.html">Week 3: Barchart</a>
+		</p>
+		<p id="Week 4">
+			<a href="Homework/week_4/scatterplot.html">Week 4: Scatterplot</a>
 		</p>
 	</body>
 </html>
