nearly final commit

--- a/Homework/week_4/scatterplot.html
+++ b/Homework/week_4/scatterplot.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+  <head>
+      <meta charset="utf-8">
+      <link rel="stylesheet" type="text/css" href="scatterplot.css">
+      <script src="//d3js.org/d3.v3.min.js"></script>
+      <script src='scatterplot.js'></script>
+  </head>
+  <body>
 
-body {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.dot {
-  stroke: #000;
-}
-
-</style>
-<body>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script src='scatterplot.js'></script>
+  </body>
