--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 		<p id="Week 4">
 			<a href="Homework/week_4/scatterplot.html">Week 4: Scatterplot</a>
 		</p>
+		<p id="Week 5">
+			<a href="Homework/week_4/line_2.html">Week 4: Scatterplot</a>
+		</p>
 	</body>
 </html>
