--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a href="Homework/week_4/scatterplot.html">Week 4: Scatterplot</a>
 		</p>
 		<p id="Week 5">
-			<a href="Homework/week_5/line_2.html">Week 4: Scatterplot</a>
+			<a href="Homework/week_5/line_2.html">Week 5: line graph</a>
 		</p>
 	</body>
 </html>
