--- a/Homework/week_5/line_2.html
+++ b/Homework/week_5/line_2.html
@@ -186,8 +186,6 @@ function updateGraph(data) {
     	  // matching the data with selector status
     	})
 
-    console.log(result)
-
     var stad = svg.selectAll(".line")
         .data(result, function(d){return d.key});
 
@@ -210,9 +208,9 @@ function updateGraph(data) {
         .attr("x", (width / 2))
         .attr("y", 0 - (margin.top - 20))
         .attr("text-anchor", "middle")
-        .style("font-size", "16px")
+        .style("font-size", "12px")
         .style("text-decoration", "underline")
-        .text("Line graph showing max temp, min temp and highest avg wind speed in Schiphol (380) and Maastricht (240)");
+        .text("Line graph showing max temp(TX), min temp(T10N) and highest avg wind speed(FHX) in Schiphol(380) and Maastricht(240)");
 
     svg.append("text")
         .attr("x", (width / 2))
@@ -275,7 +273,7 @@ function updateGraph(data) {
 
 	legend.transition()
       .style("fill", "#777" )
-      .text(function(d){return d.key;});
+      .text(function(d){return d.key + ' click me!';})
 
 	legend.exit().remove();
 
@@ -300,7 +298,7 @@ function updateGraph(data) {
           .attr("x", 0 - (height / 2))
           .attr("dy", "1em")
           .style("text-anchor", "middle")
-          .text('classes')
+          .text(function(d, i){return result[i].values[0]['TYPE']})
           .attr("class", "y axis label");
 
       // mouse over event
@@ -367,7 +365,6 @@ function updateGraph(data) {
 
               d3.selectAll(".mouse-per-line")
                 .attr("transform", function(d, i) {
-                  console.log(width/mouse[0])
                   var xDate = x.invert(mouse[0]),
                       bisect = d3.bisector(function(d) { return d.DATE; }).right;
                       idx = bisect(d.values, xDate);
