--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
 		<p id="Week 5">
 			<a href="Homework/week_5/line_2.html">Week 5: line graph</a>
 		</p>
+		<p id="Week 5">
+			<a href="Homework/week_6/linked_views.html">Week 6: linked views</a>
+		</p>
 	</body>
 </html>
