--- a/Homework/week_6/linked_views.html
+++ b/Homework/week_6/linked_views.html
@@ -47,11 +47,11 @@
 </style>
 
 <body>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/queue.v1.min.js"></script>
     <script>
 
     function filterJSON(json, key, value) {
