--- a/Homework/week_6/linked_view.html
+++ b/Homework/week_6/linked_view.html
@@ -9,7 +9,7 @@
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
         <script src="https://d3js.org/topojson.v1.min.js"></script>
-        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+        <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
         <script src="https://d3js.org/queue.v1.min.js"></script>
         <script src='linked_views.js'></script>
     </head>
